tests/baselines/reference/symbolDeclarationEmit8.errors.txt
tests/cases/conformance/es6/Symbols/symbolDeclarationEmit8.ts(2,6): error TS2702: 'Symbol' only refers to a type, but is being used as a namespace here.


==== tests/cases/conformance/es6/Symbols/symbolDeclarationEmit8.ts (1 errors) ====
    var obj = {
        [Symbol.isConcatSpreadable]: 0
         ~~~~~~
!!! error TS2702: 'Symbol' only refers to a type, but is being used as a namespace here.
    }